# bitclerk

./: Cargo.toml  README.md  justfile
.github/workflows/: audit.yml  ci.yml  zizmor.yml
src/: create.rs  error.rs  main.rs  sync.rs
