[package]
name = "bitclerk"
version = "0.1.0"
edition = "2024"
authors = ["Luis Schwab <luisschwab@protonmail.com"]
description = "A CLI tool to build transactions with OP_RETURNs from a descriptor"
license = "MIT"
repository = "https://github.com/luisschwab/bitclerk"
readme = "README.md"
keywords = ["bitcoin", "opreturn", "filters"]

[dependencies]
bdk_wallet = "2.1.0"
clap = { version = "4.5.53", features = ["derive"] }
bdk_esplora = { version = "0.22.1", default-features = false, features = ["blocking-https-rustls"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
